@@ -1,3 +1,6 @@
+Upcoming:
+- Added a new block tag rftoolsbuilder:dontremoveme which the Builder will respect and in which case the Builder will not remove the block (or replace with dirt)
+
 1.16-3.1.9:
 - Fixed the support block causing blocks to be placed wrong in copy mode. Support blocks now have material STRUCTURAL_AIR
 - Fixed the translated name for the support block
